syntax = "proto3";

message CounterRange {
  int32 from = 1;
  int32 to = 2;
}

